duh, fix send to render
