# server.js
@@ -39,7 +39,8 @@ app
     })
     .use(cors({ methods: ['GET', 'POST', 'DELETE', 'UPDATE', 'PUT', 'PATCH']}))
     .use(cors({ origin: '*'}))
-    .use('/', require('./routes/shows'));
+    .use('/api-docs', require('./routes/swagger'))
+    .use('/shows', require('./routes/shows'))
 
     passport.use(new GitHubStrategy({
         clientID: process.env.GITHUB_CLIENT_ID,
